--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "openpesa/pesa",
-    "description": "pesa",
+    "description": "Pesa PHP SDK",
     "keywords": [
+        "api",
         "openpesa",
         "pesa"
     ],
@@ -16,25 +17,26 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "guzzlehttp/guzzle": "^7.0",
+        "phpseclib/phpseclib": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
-            "Openpesa\\Pesa\\": "src"
+            "Openpesa\\SDK\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Openpesa\\Pesa\\Tests\\": "tests"
+            "Openpesa\\SDK\\Tests\\": "tests"
         }
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
         "sort-packages": true
