--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "require": {
         "php": "^7.1",
         "guzzlehttp/guzzle": "^7.0",
-        "phpseclib/phpseclib": "^2.0"
+        "phpseclib/phpseclib": "^2.0",
+        "ext-json": "*",
+        "ext-openssl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
