--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
             "name": "Alpha Olomi",
             "email": "alphaolomi@gmail.com",
             "role": "Developer"
+        },
+        {
+            "name": "Leylow Lujuo",
+            "email": "leyluj21@gmail.com",
+            "role": "Developer"
         }
     ],
     "require": {
