--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 before_script:
   # - travis_retry composer self-update
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
-  - cd docs && npm ci
+  - cd docs && npm install
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
