--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ php:
 #     - COMPOSER_FLAGS="--prefer-lowest"
 #     - COMPOSER_FLAGS=""
 
-cache:
-    directories:
-        - $HOME/.composer/cache
+# cache:
+    # directories:
+        # - $HOME/.composer/cache
 
 before_install:
     - nvm install stable
@@ -25,8 +25,8 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+    - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
     - cd docs && npm run build && cd ..
-    - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --repository=openpesa/php-pesa --format=php-clover coverage.clover
 
 # after_script:
 
