feat: add support for gizzle 6 and 7
-removed ocular
- fix typo in fixtures

--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,13 @@
     ],
     "require": {
         "php": "^7.1",
-        "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/guzzle": "^6.0|^7.0",
         "phpseclib/phpseclib": "^2.0",
         "ext-json": "*",
         "ext-openssl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
-        "scrutinizer/ocular": "^1.7"
+        "phpunit/phpunit": "^7.0"        
     },
     "autoload": {
         "psr-4": {
