--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,10 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Validate composer.json and composer.lock
       run: composer validate
-
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
@@ -25,13 +23,12 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-
     - name: Install dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
     - name: Run test suite
-      run: composer run-script test
+      run: composer run-script test  
+    - uses: codecov/codecov-action@v1
+      with:        
+        files: ./coverage.xml
+        verbose: true # optional (default = false)
