--- a/.gitattributes
+++ b/.gitattributes
@@ -9,4 +9,5 @@
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
 /docs               export-ignore
+/art               export-ignore
 /.editorconfig      export-ignore
