--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,12 @@
     "description": "Pesa PHP SDK",
     "keywords": [
         "api",
-        "openpesa",
-        "pesa"
+        "mobile-money",
+        "tanzania",
+        "pesa",
+        "pesa-sdk",
+        "pesa-sdk-php",
+        "openpesa"
     ],
     "homepage": "https://github.com/openpesa/pesa",
     "license": "MIT",
@@ -23,9 +27,10 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "guzzlehttp/guzzle": "^6.0|^7.4",        
         "ext-json": "*",
-        "ext-openssl": "*"
+        "ext-openssl": "*",
+        "guzzlehttp/guzzle": "^6.0|^7.4",
+        "phpseclib/phpseclib": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.5"
