--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "ext-openssl": "*",
-        "guzzlehttp/guzzle": "^6.0|^7.4",
-        "phpseclib/phpseclib": "~3.0"
+        "guzzlehttp/guzzle": "^6.0|^7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.5"
