--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,12 @@
         "php": "^7.2|^8.0",
         "ext-json": "*",
         "ext-openssl": "*",
-        "guzzlehttp/guzzle": "^6.0|^7.4"
+        "guzzlehttp/guzzle": "^6.5|^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5|^9.5"
+        "phpunit/phpunit": "^8.5|^9.5",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "pestphp/pest": "^1.20"
     },
     "autoload": {
         "psr-4": {
@@ -49,6 +51,9 @@
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
